# Company_Surveys_To-reduce-high-turnover

./: .env  .gitignore  advanced_analysis.py  advanced_analytics_engine.m  advanced_ml_models.m  analyze_structure.py  backup_scheduler.m  bot_requirements_analysis.csv  bot_requirements_analysis.json  bot_requirements_scraper.py  company_report.json  company_structure.json  company_structure.py  comprehensive_diagram.txt  detailed_analysis.py  eco_vehicle_detailed_execution.drawio  eco_vehicle_detailed_operations.drawio  eco_vehicle_process_control.drawio  eco_vehicle_project_details.drawio  employee_survey_analysis.py  ibm_model_generator.py  ibm_services.py  ibm_to_mongo_pipeline.py  ibm_validator.py  ml_prediction_engine.m  model_queries.js  mongo_advanced_queries.m  mongo_auth_manager.m  mongo_backup_manager.m  mongo_config_template.json  mongo_connection.m  mongo_data_transformer.m  notification_system.m  organization_diagram.txt  organization_survey_system.drawio  requirement_queries.js  requirements.txt  requirements_api.py  requirements_manager.py  security_manager.m  (+14 more)
model_based_db_local/: CMakeLists.txt  IMPLEMENTATION_REPORT.md  QUICK_START.md  README.md  conanfile.txt  config.py  organize_project.sh  requirements.db  requirements.txt
model_based_db_local/docs/: CMakeLists.txt  Doxyfile.in
model_based_db_local/docs/dev/: DEVELOPER_GUIDE.md
model_based_db_local/include/api/: APIHandlers.hpp  RESTServer.hpp  WebSocketServer.hpp
model_based_db_local/include/core/: Project.hpp  Requirement.hpp  Traceability.hpp  UMLDiagram.hpp  User.hpp
model_based_db_local/include/db/: DatabaseManager.hpp  ProjectRepository.hpp  RequirementRepository.hpp  UserRepository.hpp
model_based_db_local/include/gui/: DiagramEditor.hpp  MainWindow.hpp  ProjectView.hpp  RequirementEditor.hpp
model_based_db_local/include/simulation/: ModelVisualizer.hpp  SimulationEngine.hpp
model_based_db_local/scripts/: build.sh
model_based_db_local/src/: CMakeLists.txt  app_manager.py  database.py  gui.py  main.cpp  main.py  models.py  requirements.db  requirements_service.py  schemas.py  uml_service.py  vention_integration.py  vention_simulation.py
model_based_db_local/src/api/: APIHandlers.cpp  RESTServer.cpp  WebSocketServer.cpp
model_based_db_local/src/core/: CompanyStructure.hpp  ConfigManager.hpp  ContractManager.hpp  Database.hpp  EmployeeSurveySystem.cpp  EmployeeSurveySystem.hpp  NotificationSystem.hpp  Project.cpp  ReportExporter.hpp  Requirement.cpp  RoleSpecificQuestions.cpp  SurveyQuestionBank.cpp  SurveyScheduler.hpp  SurveySystem.hpp  SysMLIntegration.hpp  SystemVDocument.hpp  Traceability.cpp  UMLDiagram.cpp  User.cpp  User.hpp  WebServer.hpp
model_based_db_local/src/db/: DatabaseManager.cpp  ProjectRepository.cpp  RequirementRepository.cpp  SurveyDatabase.hpp  UserRepository.cpp
model_based_db_local/src/gui/: AnalyticsVisualization.hpp  DiagramEditor.cpp  MainWindow.cpp  MainWindow.hpp  ProjectView.cpp  RequirementEditor.cpp  SurveyDesignerWidget.hpp  SurveyMainWindow.cpp  SurveyMainWindow.hpp  SurveyManagementWindow.hpp  UIComponents.hpp
model_based_db_local/src/simulation/: GeospatialIntegration.cpp  ModelVisualizer.cpp  SimulationEngine.cpp
model_based_db_local/static/: index.html
model_based_db_local/static/js/: dashboard.js
model_based_db_local/tests/: CMakeLists.txt
model_based_db_local/tests/api/: APIHandlersTest.cpp  CMakeLists.txt  RESTServerTest.cpp  WebSocketServerTest.cpp
model_based_db_local/tests/core/: CMakeLists.txt  ProjectTest.cpp  RequirementTest.cpp  TraceabilityTest.cpp  UMLDiagramTest.cpp  UserTest.cpp
(+45 files in other folders)
